--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -82,77 +82,16 @@
     <h1 class="heading"> worldwide <span>beer's</span> </h1>
 
     <div class="box-container">
-
+        <% for(let cerveza of cervezas){ %>
         <div class="box">
-            <img src="images/menu-1.jpg" alt="">
-            <h3>5 de Mayo Saga</h3>
-            <h4>Blone Ale</h4>
-            <div class="price">$56.00</div>
+            <img src="images/<%= cerveza.img %>" alt="">
+            <h3><%= cerveza.titulo%></h3>
+            <h4><%= cerveza.tipo%></h4>
+            <div class="price"><%= cerveza.precio%></div>
             <a href="#" class="btn">add to cart</a>
+        
         </div>
-        <div class="box">
-            <img src="images/menu-2.jpg" alt="">
-            <h3>Chacá Tequilana</h3>
-            <h4>Blone Ale</h4>
-            <div class="price">$30.00<span>$51.00</span></div>
-            <a href="#" class="btn">add to cart</a>
-        </div>
-        <div class="box">
-            <img src="images/menu-3.jpg" alt="">
-            <h3>Calavera Mexican</h3>
-            <h4>Imperial Stout</h4>
-            <div class="price">$59.00</div>
-            <a href="#" class="btn">add to cart</a>
-        </div>
-        <div class="box">
-            <img src="images/menu-4.jpg" alt="">
-            <h3>Jabalí Bock</h3>
-            <h4>Bock</h4>
-            <div class="price">$41.00<span>$49.00</span></div>
-            <a href="#" class="btn">add to cart</a>
-        </div>
-        <div class="box">
-            <img src="images/menu-5.jpg" alt="">
-            <h3>Delirium Nocturnum</h3>
-            <h4>Belgian Strong Ale</h4>
-            <div class="price">$142.00<span>$149.00</span></div>
-            <a href="#" class="btn">add to cart</a>
-        </div>
-        <div class="box">
-            <img src="images/menu-6.jpg" alt="">
-            <h3>Grolsch Premium Lager</h3>
-            <h4>Lager</h4>
-            <div class="price">$74.00</div>
-            <a href="#" class="btn">add to cart</a>
-        </div>
-        <div class="box">
-            <img src="images/menu-7.jpg" alt="">
-            <h3>Erdinger Pikantus</h3>
-            <h4>Bock</h4>
-            <div class="price">$120.00</div>
-            <a href="#" class="btn">add to cart</a>
-        </div>
-        <div class="box">
-            <img src="images/menu-8.jpg" alt="">
-            <h3>La Trappe Dubbel</h3>
-            <h4>Dubbel</h4>
-            <div class="price">$81.00<span>$120.00</span></div>
-            <a href="#" class="btn">add to cart</a>
-        </div>
-        <div class="box">
-            <img src="images/menu-9.jpg" alt="">
-            <h3>London Pridel</h3>
-            <h4>Bitter</h4>
-            <div class="price">$109.00<span>$129.00</span></div>
-            <a href="#" class="btn">add to cart</a>
-        </div>
-        <div class="box">
-            <img src="images/menu-10.jpg" alt="">
-            <h3>Hornet Gose</h3>
-            <h4>Gose</h4>
-            <div class="price">$94.00</div>
-            <a href="#" class="btn">add to cart</a>
-        </div>
+        <% } %>   
     </div>
 
 </section>
@@ -166,91 +105,32 @@
     <h1 class="heading"> our <span>beer's</span> </h1>
 
     <div class="box-container">
-
+        
+        <% for(let cerveza of cervezasNuestras){ %>
         <div class="box">
             <div class="content">
-                <h3>El Secreto 1881 Malta Dorada</h3>
+                <h3><%= cerveza.titulo%></h3>
                 <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
+                    <% for(let i= 0; i< cerveza.score; i++){ %>
+                        <i class="fas fa-star"></i>             
+                    <% } %>
+                    <% if(cerveza.score < 5){ %>
+                        <% for(let i = cerveza.score; i < 5; i++ ){%>
+                            <i class="far fa-star"></i>
+                        <%}%>
+                    <% } %>
                 </div>
-                <div class="price">$36.99 <span>$59.99</span></div>
+                <div class="price"><%= cerveza.precio%> <span>$119.99</span></div>
             </div>
             <div class="image">
-                <img src="images/our-beer1.jpg" alt="">
+                <img src="images/<%= cerveza.img %>" alt="">
             </div>
             <div class="icons">
                 <a href="#" class="fas fa-shopping-cart"></a>
                 <a href="#" class="fas fa-heart"></a>
             </div>
         </div>
-
-        <div class="box">
-            <div class="content">
-                <h3>El Secreto 1881 Brown</h3>
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                </div>
-                <div class="price">$38.00 <span>$45.00</span></div>
-            </div>
-            <div class="image">
-                <img src="images/our-beer2.jpg" alt="">
-            </div>
-            <div class="icons">
-                <a href="#" class="fas fa-shopping-cart"></a>
-                <a href="#" class="fas fa-heart"></a>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="content">
-                <h3>El Secreto 1881 Murmullo</h3>
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="price">$38.00 <span>$45.00</span></div>
-            </div>
-            <div class="image">
-                <img src="images/our-beer3.jpg" alt="">
-            </div>
-            <div class="icons">
-                <a href="#" class="fas fa-shopping-cart"></a>
-                <a href="#" class="fas fa-heart"></a>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="content">
-                <h3>El Secreto 1881 Obscura</h3>
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star"></i>
-                </div>
-                <div class="price">$38.00 <span>$45.00</span></div>
-            </div>
-            <div class="image">
-                <img src="images/our-beer4.jpg" alt="">
-            </div>
-            <div class="icons">
-                <a href="#" class="fas fa-shopping-cart"></a>
-                <a href="#" class="fas fa-heart"></a>
-            </div>
-        </div>
-
+        <% } %>
     </div>
 
 </section>
@@ -264,89 +144,26 @@
     <h1 class="heading"> customer's <span>review</span> </h1>
 
     <div class="box-container">
-
+        <% for(let review of reviews){ %>
         <div class="box">
             <div class="quote-icon">
                 <i class="far fa-address-card"></i>
             </div> 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi nobis? Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus vel? Nemo.</p>
-            <img src="images/pic-1.png" class="user" alt="">
-            <h3>Juni Ito</h3>
+            <p><%= review.text %></p>
+            <img src="images/<%= review.img%>" class="user" alt="">
+            <h3><%= review.name%></h3>
             <div class="stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                
+                <% for(let i= 0; i< review.score; i++){ %>
+                    <i class="fas fa-star"></i>             
+                <% } %>
+                <% if(review.score < 5){ %>
+                    <% for(let i = review.score; i < 5; i++ ){%>
+                        <i class="far fa-star"></i>
+                    <%}%>
+                <% } %>
             </div>
         </div>
-
-        <div class="box">
-            <div class="quote-icon">
-                <i class="far fa-address-card"></i>
-            </div> 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi nobis? Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus vel? Nemo.</p>
-            <img src="images/pic-1.png" class="user" alt="">
-            <h3>Ernesto Guevara</h3>
-            <div class="stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="quote-icon">
-                <i class="far fa-address-card"></i>
-            </div> 
-
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi nobis? Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus vel? Nemo.</p>
-            <img src="images/pic-1.png" class="user" alt="">
-            <h3>Gerardo Linares</h3>
-            <div class="stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-                <i class="far fa-star"></i>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="quote-icon">
-                <i class="far fa-address-card"></i>
-            </div> 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi nobis? Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus vel? Nemo.</p>
-            <img src="images/pic-1.png" class="user" alt="">
-            <h3>Chonsu Garcia</h3>
-            <div class="stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-            </div>
-        </div>
-        
-        <div class="box">
-            <<div class="quote-icon">
-                <i class="far fa-address-card"></i>
-            </div> 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi nobis? Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus vel? Nemo.</p>
-            <img src="images/pic-1.png" class="user" alt="">
-            <h3>Bodoque Linares</h3>
-            <div class="stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-            </div>
-        </div>
-
+        <%}%>
     </div>
 
 </section>
